--- a/package.json
+++ b/package.json
@@ -1,27 +1,32 @@
 {
-  "name": "clean-node-api",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "jest"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/jest": "^29.2.4",
-    "@types/node": "^18.11.15",
-    "@typescript-eslint/eslint-plugin": "^5.46.1",
-    "eslint": "^8.29.0",
-    "eslint-config-standard-with-typescript": "^24.0.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-n": "^15.6.0",
-    "eslint-plugin-promise": "^6.1.1",
-    "git-commit-msg-linter": "^4.4.0",
-    "jest": "^29.3.1",
-    "ts-jest": "^29.0.3",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.4"
-  }
+	"name": "clean-node-api",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
+		"test:verbose": "jest --passWithNoTests",
+		"test:integration": "npm test -- --watch -c jest-unit-config.js",
+		"test:unit": "npm test -- --watch",
+		"test:staged": "npm test -- --findRelatedTests",
+		"test:ci": "npm test -- --coverage"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"devDependencies": {
+		"@types/jest": "^29.2.4",
+		"@types/node": "^18.11.15",
+		"@typescript-eslint/eslint-plugin": "^5.46.1",
+		"eslint": "^8.29.0",
+		"eslint-config-standard-with-typescript": "^24.0.0",
+		"eslint-plugin-import": "^2.26.0",
+		"eslint-plugin-n": "^15.6.0",
+		"eslint-plugin-promise": "^6.1.1",
+		"git-commit-msg-linter": "^4.4.0",
+		"jest": "^29.3.1",
+		"ts-jest": "^29.0.3",
+		"ts-node": "^10.9.1",
+		"typescript": "^4.9.4"
+	}
 }
