--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 	"devDependencies": {
 		"@types/jest": "^29.2.4",
 		"@types/node": "^18.11.15",
+		"@types/validator": "^13.7.10",
 		"@typescript-eslint/eslint-plugin": "^5.46.1",
 		"eslint": "^8.29.0",
 		"eslint-config-standard-with-typescript": "^24.0.0",
@@ -28,5 +29,8 @@
 		"ts-jest": "^29.0.3",
 		"ts-node": "^10.9.1",
 		"typescript": "^4.9.4"
+	},
+	"dependencies": {
+		"validator": "^13.7.0"
 	}
 }
