--- a/package.json
+++ b/package.json
@@ -15,14 +15,16 @@
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
+		"@shelf/jest-mongodb": "^4.1.4",
 		"@types/bcrypt": "^5.0.0",
 		"@types/jest": "^29.2.4",
+		"@types/mongodb": "^4.0.7",
 		"@types/node": "^18.11.15",
 		"@types/validator": "^13.7.10",
 		"@typescript-eslint/eslint-plugin": "^5.46.1",
 		"eslint": "^8.29.0",
-		"eslint-config-standard-with-typescript": "^24.0.0",
-		"eslint-plugin-import": "^2.26.0",
+		"eslint-config-standard-with-typescript": "^21.0.1",
+		"eslint-plugin-import": "^2.24.1",
 		"eslint-plugin-n": "^15.6.0",
 		"eslint-plugin-promise": "^6.1.1",
 		"git-commit-msg-linter": "^4.4.0",
@@ -33,6 +35,7 @@
 	},
 	"dependencies": {
 		"bcrypt": "^5.1.0",
+		"mongodb": "^4.13.0",
 		"validator": "^13.7.0"
 	}
 }
