--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
+		"start": "sucrase-node src/main/server.ts",
 		"test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
 		"test:verbose": "jest --passWithNoTests",
 		"test:integration": "npm test -- --watch -c jest-unit-config.js",
@@ -17,6 +18,7 @@
 	"devDependencies": {
 		"@shelf/jest-mongodb": "^1.1.3",
 		"@types/bcrypt": "^5.0.0",
+		"@types/express": "^4.17.15",
 		"@types/jest": "^29.2.4",
 		"@types/mongodb": "^3.3.14",
 		"@types/node": "^18.11.15",
@@ -29,12 +31,14 @@
 		"eslint-plugin-promise": "^5.0.0",
 		"git-commit-msg-linter": "^4.4.0",
 		"jest": "^29.3.1",
+		"sucrase": "^3.29.0",
 		"ts-jest": "^29.0.3",
 		"ts-node": "^10.9.1",
 		"typescript": "^4.9.4"
 	},
 	"dependencies": {
 		"bcrypt": "^5.1.0",
+		"express": "^4.18.2",
 		"mongodb": "^3.5.1",
 		"validator": "^13.7.0"
 	}
