--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@types/jest": "^29.2.4",
 		"@types/mongodb": "^3.3.14",
 		"@types/node": "^18.11.15",
+		"@types/supertest": "^2.0.12",
 		"@types/validator": "^13.7.10",
 		"@typescript-eslint/eslint-plugin": "^4.0.1",
 		"eslint": "^7.0.0",
@@ -32,12 +33,14 @@
 		"git-commit-msg-linter": "^4.4.0",
 		"jest": "^29.3.1",
 		"sucrase": "^3.29.0",
+		"supertest": "^6.3.3",
 		"ts-jest": "^29.0.3",
 		"ts-node": "^10.9.1",
 		"typescript": "^4.9.4"
 	},
 	"dependencies": {
 		"bcrypt": "^5.1.0",
+		"cors": "^2.8.5",
 		"express": "^4.18.2",
 		"mongodb": "^3.5.1",
 		"validator": "^13.7.0"
